--- a/templates/register.html
+++ b/templates/register.html
@@ -6,6 +6,7 @@
   <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
   사용자명: <input type="text" name="username" required><br>
   비밀번호: <input type="password" name="password" required><br>
+  비밀번호 확인:<input type="password" name="password_confirm" required><br>
   <button type="submit">회원가입</button>
 </form>
 {% endblock %}
