--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,4 +14,21 @@
 <form action="{{ url_for('change_password') }}" method="get" style="margin-top: 1em;">
   <button type="submit">비밀번호 변경</button>
 </form>
+
+<hr>
+
+<h3>내가 등록한 상품</h3>
+{% if products %}
+<ul>
+  {% for p in products %}
+    <li>
+      <a href="{{ url_for('view_product', product_id=p.id) }}">{{ p.title }}</a>
+      - 가격: {{ p.price }}
+    </li>
+  {% endfor %}
+</ul>
+{% else %}
+<p>등록한 상품이 없습니다.</p>
+{% endif %}
+
 {% endblock %}
