--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,7 +6,7 @@
 <ul>
   {% for product in products %}
     <li>
-      <a href="{{ url_for('view_product', product_id=product.id) }}">{{ product.title }}</a>
+      <a href="{{ url_for('view_product', product_id=product.id, next='dashboard') }}">{{ product.title }}</a>
       - 가격: {{ product.price }}
     </li>
   {% endfor %}
