--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -13,7 +13,7 @@
 <ul>
   {% for p in products %}
     <li>
-      <a href="{{ url_for('view_product', product_id=p.id) }}">{{ p.title }}</a>
+      <a href="{{ url_for('view_product', product_id=p.id, next='profile') }}">{{ p.title }}</a>
       - 가격: {{ p.price }}
     </li>
   {% endfor %}
