--- a/templates/base.html
+++ b/templates/base.html
@@ -91,6 +91,7 @@
       <a href="{{ url_for('dashboard') }}">대시보드</a>
       <a href="{{ url_for('profile') }}">프로필</a>
       <a href="{{ url_for('report') }}">신고하기</a>
+      <a href="{{ url_for('chat_list') }}">1대1 채팅</a>
       <a href="{{ url_for('logout') }}">로그아웃</a>
     {% else %}
       <a href="{{ url_for('login') }}">로그인</a>
