--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -6,6 +6,14 @@
   {{ user.bio or '등록된 소개글이 없습니다.' }}
 </p>
 
+{% if session.get('user_id') != user.id %}
+  <form action="{{ url_for('report') }}" method="get" style="margin-top:1em;">
+    <input type="hidden" name="target_type" value="user">
+    <input type="hidden" name="target_id"   value="{{ user.id }}">
+    <button type="submit">신고하기</button>
+  </form>
+{% endif %}
+
 <hr>
 
 <h3>{{ user.username }} 님이 등록한 상품</h3>
