--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -34,5 +34,12 @@
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <button type="submit">1:1 채팅 시작</button>
   </form>
+  
+  {# ↓ 신고 버튼 #}
+  <form action="{{ url_for('report') }}" method="get" style="margin-top:1em;">
+    <input type="hidden" name="target_type" value="product">
+    <input type="hidden" name="target_id"   value="{{ product.id }}">
+    <button type="submit">신고하기</button>
+  </form>
 {% endif %}
 {% endblock %}
