--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,6 +7,16 @@
   <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
   소개글: <br>
   <textarea name="bio" rows="4" cols="50">{{ user.bio or '' }}</textarea><br>
+
+  <!-- 계좌번호 입력 필드 추가 -->
+  <label for="account_number">계좌번호:</label><br>
+  <input type="text"
+         id="account_number"
+         name="account_number"
+         value="{{ user.account_number or '' }}"
+         placeholder="은행명-계좌번호 형식으로 입력"
+         maxlength="50"><br><br>
+
   <button type="submit">프로필 업데이트</button>
 </form>
 
