--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -15,7 +15,7 @@
     {% endif %}
   </p>
 
-  {% if session.get('user_id') == product.seller_id %}
+  {% if session.get('user_id') == product.seller_id or session.get('is_admin')%}
   <form action="{{ url_for('delete_product', product_id=product.id) }}"
         method="post"
         style="margin-top:1em;">
